ambassador/gold.json
{
    "admin":{
        "access_log_path":"/tmp/admin_access_log",
        "address":"tcp://127.0.0.1:8001"
    },
    "cluster_manager":{
        "clusters":[
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://127.0.0.1:8877"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_127_0_0_1_8877",
                "type":"strict_dns"
            },
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://192.168.0.1:45"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_192_168_0_1_45",
                "type":"strict_dns"
            },
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://127.0.0.1:8877"
                    }
                ],
                "lb_type":"random",
                "name":"cluster_diagnostics",
                "type":"logical_dns"
            },
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://example-auth:3000"
                    }
                ],
                "lb_type":"random",
                "name":"cluster_ext_auth",
                "type":"logical_dns"
            },
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://qotm:80"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_qotm",
                "type":"strict_dns"
            },
            {
                "circuit_breakers":{
                    "default":{
                        "max_connections":1,
                        "max_pending_requests":1,
                        "max_retries":3
                    }
                },
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://qotm:80"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_qotm_cb_default",
                "type":"strict_dns"
            },
            {
                "circuit_breakers":{
                    "default":{
                        "max_connections":1,
                        "max_pending_requests":1,
                        "max_retries":3
                    }
                },
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://qotm:80"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_qotm_cb_default_od_default",
                "outlier_detection":{
                    "consecutive_5xx":5,
                    "interval_ms":3000,
                    "max_ejection_percent":100
                },
                "type":"strict_dns"
            },
            {
                "connect_timeout_ms":250,
                "hosts":[
                    {
                        "url":"tcp://qotm.tspace:80"
                    }
                ],
                "lb_type":"round_robin",
                "name":"cluster_qotm_tspace",
                "type":"strict_dns"
            }
        ]
    },
    "listeners":[
        {
            "address":"tcp://0.0.0.0:443",
            "filters":[
                {
                    "config":{
                        "access_log":[
                            {
                                "path":"/tmp/access_log"
                            }
                        ],
                        "codec_type":"auto",
                        "filters":[
                            {
                                "config":{
                                    "allowed_headers":[
                                        "x-qotm-session"
                                    ],
                                    "cluster":"cluster_ext_auth",
                                    "path_prefix":"/extauth",
                                    "timeout_ms":5000
                                },
                                "name":"extauth",
                                "type":"decoder"
                            },
                            {
                                "config":{},
                                "name":"router",
                                "type":"decoder"
                            }
                        ],
                        "route_config":{
                            "virtual_hosts":[
                                {
                                    "domains":[
                                        "*"
                                    ],
                                    "name":"backend",
                                    "routes":[
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/ambassador/v0/check_ready",
                                            "prefix_rewrite":"/ambassador/v0/diag/ambassador.yaml.1?method=GET&resource=/ambassador/v0/check_ready",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/ambassador/v0/check_alive",
                                            "prefix_rewrite":"/ambassador/v0/diag/ambassador.yaml.1?method=GET&resource=/ambassador/v0/check_alive",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/qotm/quote/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-qotm.yaml.2?method=GET&resource=/qotm/quote/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/service/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-qotm.yaml.3?method=GET&resource=/service/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/tspace/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-qotm2.yaml.1?method=GET&resource=/tspace/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/put/evil/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-evil.yaml.2?method=PUT&resource=/evil/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/qotm/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-qotm.yaml.1?method=GET&resource=/qotm/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/grpc/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-grpc.yaml.1?method=GET&resource=/grpc/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_diagnostics",
                                            "prefix":"/ambassador/v0/diag/get/evil/",
                                            "prefix_rewrite":"/ambassador/v0/diag/mapping-evil.yaml.1?method=GET&resource=/evil/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_127_0_0_1_8877",
                                            "prefix":"/ambassador/v0/check_ready",
                                            "prefix_rewrite":"/ambassador/v0/check_ready",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_127_0_0_1_8877",
                                            "prefix":"/ambassador/v0/check_alive",
                                            "prefix_rewrite":"/ambassador/v0/check_alive",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm_cb_default",
                                            "prefix":"/qotm/quote/",
                                            "prefix_rewrite":"/quote/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm_cb_default_od_default",
                                            "prefix":"/service/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm_tspace",
                                            "prefix":"/tspace/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm",
                                            "prefix":"/qotm/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_192_168_0_1_45",
                                            "prefix":"/grpc/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm",
                                            "headers":[
                                                {
                                                    "name":":method",
                                                    "regex":false,
                                                    "value":"PUT"
                                                }
                                            ],
                                            "prefix":"/evil/",
                                            "prefix_rewrite":"/qotm/quote/",
                                            "timeout_ms":500
                                        },
                                        {
                                            "cluster":"cluster_qotm",
                                            "headers":[
                                                {
                                                    "name":":method",
                                                    "regex":false,
                                                    "value":"GET"
                                                }
                                            ],
                                            "prefix":"/evil/",
                                            "prefix_rewrite":"/",
                                            "timeout_ms":500
                                        }
                                    ]
                                }
                            ]
                        },
                        "stat_prefix":"ingress_http"
                    },
                    "name":"http_connection_manager",
                    "type":"read"
                }
            ],
            "ssl_context":{
                "ca_cert_file":"/etc/cacert/fullchain.pem",
                "cert_chain_file":"/etc/certs/tls.crt",
                "private_key_file":"/etc/certs/tls.key",
                "require_client_certificate":true
            }
        }
    ],
    "stats_flush_interval_ms":1000,
    "statsd_udp_ip_address":"127.0.0.1:8125"
}
